src/styles/components/Emission.css
.EmissionList {
    display: flex;
    flex: 0 0 290px;
    overflow-x: scroll;
}

.Emission {
    display: flex;
    flex: 0 0 220px;
    flex-wrap: wrap;
    padding-right: 2em;
    font-weight: bold;
    font-size: 0.8em;
    margin-bottom: 20px;
}

.Emission__imageContainer {
    flex: 0 0 200px;
    height: 200px;
    border: 10px solid black;
}

.Emission__image {

}

.Emission--featured .Emission__name {
    color: red;
}

.Emission__name {
    flex: 1 1 100%;
}

.Emission__name a {
    color: black;
}

.Emission__date {
    flex: 1 1 100%;
}

.EmissionCalendar {
    display: flex;
    flex: 1;
    height: 100%;
    flex-direction: column;
    margin: 0 1em;
}

.AppContainer--mobile .EmissionCalendar {
    min-width: 100%;
    margin: 0;
}

.EmissionCalendar__section {
    display: flex;
    flex: 1;
    flex-direction: column;
    margin-bottom: 20px;
}

.EmissionCalendar__date {
    text-transform: uppercase;
    font-weight: bold;
    font-size: 26px;
    margin-bottom: 10px;
}

.EmissionCalendar__date > span {
    border-bottom: 7px solid black;
    padding-bottom: 4px;
}

.EmissionCalendar__container {
    display: flex;
    flex: 1;
    flex-direction: column;
}

.Emission--small {
    display: flex;
    font-weight: bold;
    line-height: 18px;
    text-transform: uppercase;
}

.Emission--small .Emission__date {
    flex: 0 0 60px;
}

.EmissionCalendar__title {
    font-size: 2.5em;
    text-transform: uppercase;
}

